# openapi.json
@@ -455,6 +455,11 @@
             "type": "string",
             "minLength": 1,
             "maxLength": 120
+          },
+          "projectName": {
+            "type": "string",
+            "minLength": 1,
+            "maxLength": 100
           }
         }
       },
